tests/print_bad_arg_type.stderr
tests/print_bad_arg_type.hop:7:8: error: HOP2075: consteval error: print requires scalar, type, pointer, or string arguments
