tests/print_bad_arg_type.hop
// Verifies print rejects aggregate arguments.
struct Pair {
	x int
}

fn main() {
	print(Pair{ x: 1 })
}
